Added some more writing
It's the last <p>

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello, GitHub!</h1>
     <h2>I have your code!!</h2>
     <p>Is it working?</p>
+    <p>Who knows? But I am writing some things just to see how it is. I think i like this!</p>
 
 </body>
 </html>
